fix option too long

--- a/design/frontend/TouchShop/Peanut/TouchShop_Basic/web/css/index.css
+++ b/design/frontend/TouchShop/Peanut/TouchShop_Basic/web/css/index.css
@@ -963,6 +963,10 @@ ul.footer.links {
     display: none;
 }
 
+.swatch-option {
+  height: initial !important;
+}
+
 /*search result*/
 
 .search.results .actions-secondary {
